## Process this file with automake to produce Makefile.in
## Copyright (c) 2004 Philip Kendall
## Copyright (c) 2015 Sergio Baldoví

## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License along
## with this program; if not, write to the Free Software Foundation, Inc.,
## 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
##
## Author contact information:
##
## E-mail: philip-fuse@shadowmagic.org.uk

fuse_SOURCES += \
                machines/machines_periph.c \
                machines/pentagon.c \
                machines/pentagon512.c \
                machines/pentagon1024.c \
                machines/scorpion.c \
                machines/spec128.c \
                machines/spec16.c \
                machines/spec48.c \
                machines/spec48_ntsc.c \
                machines/specplus2.c \
                machines/spec_se.c \
                machines/specplus2a.c \
                machines/specplus3.c \
                machines/specplus3e.c \
                machines/tc2048.c \
                machines/tc2068.c \
                machines/ts2068.c

noinst_HEADERS += \
                  machines/machines.h \
                  machines/machines_periph.h \
                  machines/pentagon.h \
                  machines/scorpion.h \
                  machines/spec128.h \
                  machines/spec48.h \
                  machines/specplus3.h \
                  machines/tc2068.h
