## Process this file with automake to produce Makefile.in
## Copyright (c) 1999-2011 Philip Kendall
## Copyright (c) 2015 Sergio Baldoví

## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License along
## with this program; if not, write to the Free Software Foundation, Inc.,
## 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
##
## Author contact information:
##
## E-mail: philip-fuse@shadowmagic.org.uk

ROMS = \
       roms/128-0.rom \
       roms/128-1.rom \
       roms/48.rom \
       roms/disciple.rom \
       roms/plus2-0.rom \
       roms/plus2-1.rom \
       roms/plus3-0.rom \
       roms/plus3-1.rom \
       roms/plus3-2.rom \
       roms/plus3-3.rom \
       roms/plus3e-0.rom \
       roms/plus3e-1.rom \
       roms/plus3e-2.rom \
       roms/plus3e-3.rom \
       roms/plusd.rom \
       roms/tc2048.rom \
       roms/tc2068-0.rom \
       roms/tc2068-1.rom \
       roms/se-0.rom \
       roms/se-1.rom \
       roms/speccyboot-1.4.rom

pkgdata_DATA += $(ROMS)

EXTRA_DIST += \
              $(ROMS) \
              roms/README.copyright
